--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -23,7 +23,7 @@
 </style>
 <!-- you have to define 2 functions in the global scope: -->
 <script type="text/javascript">
-    var devices = [];
+    var countdown = [];
     // the function loadSettings has to exist ...
     function load(settings, onChange) {
         if (!settings) return;
@@ -46,9 +46,9 @@
                 });
             }
         }
-        devices    = settings.devices    || [];
+        countdown    = settings.countdown    || [];
         onChange(false);
-        values2table('devices', devices, onChange);
+        values2table('countdown', countdown, onChange);
     }
     // ... and the function save has to exist.
     // you have to make sure the callback is called with the settings object as first param!
@@ -62,7 +62,7 @@
                 obj[$this.attr('id')] = $this.val();
             }
         });
-        obj.devices = table2values('devices');
+        obj.countdown = table2values('countdown');
         callback(obj);
     }
 </script>
@@ -78,34 +78,22 @@
     <div class="row">
         <div class="col s12">
             <ul class="tabs">
-                <li class="tab col s2"><a href="#tab-main"    class="translate active">Main settings</a></li>
-                <li class="tab col s2"><a href="#tab-devices" class="translate">addresses</a></li>
+                <li class="tab col s2"><a href="#tab-main"    class="translate active">Settings</a></li>
             </ul>
         </div>
-
-        <div id="tab-main"      class="col s12 page">
-            <div class="row">
-                <div class="col s12 m4 l2">
-                    <img src="hs100.png" class="logo">
-                </div>
-            </div>
-
-            <div class="col s12 m4 l1">
-                <input class="value number" id="interval" size="5" maxlength="6" type="number"/>
-                <label class="translate" for="interval">interval</label>
-            </div>
-        </div>
-
-
-        <div id="tab-devices"    class="col s12 page">
-            <div class="col s12" id="devices">
+        <div id="tab-main"    class="col s12 page">
+            <div class="col s12" id="countdown">
                 <a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
                 <div class="table-values-div">
                     <table class="table-values">
                         <thead>
                         <tr>
-                            <th data-name="name"     style="width: 50%" class="translate">name</th>
-                            <th data-name="ip"     style="width: 30%" class="translate">ipaddress</th>
+                            <th data-name="name"     style="width: 30%" class="translate">name</th>
+                            <th data-name="Year"     style="width: 10%" class="translate">year</th>
+                            <th data-name="Month"     style="width: 10%" class="translate">month</th>
+                            <th data-name="Day"     style="width: 10%" class="translate">day</th>
+                            <th data-name="Hour"     style="width: 10%" class="translate">hour</th>
+                            <th data-name="Minute"     style="width: 10%" class="translate">minute</th>
                             <th data-name="active"  style="width: 70px" data-style="width: 70px" data-type="checkbox" class="translate">enabled</th>
                             <th data-buttons="delete up down" style="width: 120px"></th>
                         </tr>
