--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -76,10 +76,10 @@
 <!-- you have to put your config page in a div with id adapter-container -->
 <div class="m adapter-container">
     <div class="row">
-        <div class="col s12">
-            <ul class="tabs">
-                <li class="tab col s2"><a href="#tab-main"    class="translate active">Settings</a></li>
-            </ul>
+        <div class="row">
+            <div class="col s6">
+                <img src="countdown.png" class="logo"/>
+            </div>
         </div>
         <div id="tab-main"    class="col s12 page">
             <div class="col s12" id="countdown">
@@ -88,12 +88,12 @@
                     <table class="table-values">
                         <thead>
                         <tr>
-                            <th data-name="name"     style="width: 30%" class="translate">name</th>
-                            <th data-name="Year"     style="width: 10%" class="translate">year</th>
-                            <th data-name="Month"     style="width: 10%" class="translate">month</th>
-                            <th data-name="Day"     style="width: 10%" class="translate">day</th>
-                            <th data-name="Hour"     style="width: 10%" class="translate">hour</th>
-                            <th data-name="Minute"     style="width: 10%" class="translate">minute</th>
+                            <th data-name="name"     style="width: 30%" class="translate">Name</th>
+                            <th data-name="year"     style="width: 10%" class="translate">Year</th>
+                            <th data-name="month"     style="width: 10%" class="translate">Month</th>
+                            <th data-name="day"     style="width: 10%" class="translate">Day</th>
+                            <th data-name="hour"     style="width: 10%" class="translate">Hour</th>
+                            <th data-name="minute"     style="width: 10%" class="translate">Minute</th>
                             <th data-name="active"  style="width: 70px" data-style="width: 70px" data-type="checkbox" class="translate">enabled</th>
                             <th data-buttons="delete up down" style="width: 120px"></th>
                         </tr>
