--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -83,6 +83,7 @@
         </div>
         <div id="tab-main"    class="col s12 page">
             <div class="col s12" id="countdown">
+                <span style="font-size: larger;" class="translate">Add countdown: </span><a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
                 <a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
                 <div class="table-values-div">
                     <table class="table-values">
@@ -94,7 +95,7 @@
                             <th data-name="day"     style="width: 10%" class="translate">Day</th>
                             <th data-name="hour"     style="width: 10%" class="translate">Hour</th>
                             <th data-name="minute"     style="width: 10%" class="translate">Minute</th>
-                            <th data-name="active"  style="width: 70px" data-style="width: 70px" data-type="checkbox" class="translate">enabled</th>
+                            <th data-name="active"  style="width: 70px" data-style="width: 70px" data-type="checkbox" class="translate">Active</th>
                             <th data-buttons="delete up down" style="width: 120px"></th>
                         </tr>
                         </thead>
