--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -83,7 +83,7 @@
         </div>
         <div id="tab-main"    class="col s12 page">
             <div class="col s12" id="countdown">
-                <span style="font-size: larger;" class="translate">Add countdown: </span><a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
+                <span style="font-size: larger;" class="translate">Add countdown:
                 <a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
                 <div class="table-values-div">
                     <table class="table-values">
