store setup correctly

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -23,7 +23,7 @@
 </style>
 <!-- you have to define 2 functions in the global scope: -->
 <script type="text/javascript">
-    var countdown = [];
+    var setup = [];
     // the function loadSettings has to exist ...
     function load(settings, onChange) {
         if (!settings) return;
