--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -89,6 +89,7 @@
                     <table class="table-values">
                         <thead>
                         <tr>
+                            <th data-name="_index"     style="width: 30px" class="translate">ID</th>
                             <th data-name="name"     style="width: 30%" class="translate">Name</th>
                             <th data-name="year"     style="width: 10%" class="translate">Year</th>
                             <th data-name="month"     style="width: 10%" class="translate">Month</th>
