Übersetzungen und Test Files gelöscht

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -91,12 +91,12 @@
                         <tr>
                             <th data-name="_index"     style="width: 30px" class="translate">ID</th>
                             <th data-name="name"     style="width: 30%" class="translate">Name</th>
-                            <th data-name="year"     style="width: 10%" class="translate">Year</th>
-                            <th data-name="month"     style="width: 10%" class="translate">Month</th>
-                            <th data-name="day"     style="width: 10%" class="translate">Day</th>
-                            <th data-name="hour"     style="width: 10%" class="translate">Hour</th>
-                            <th data-name="minute"     style="width: 10%" class="translate">Minute</th>
-                            <th data-name="active"  style="width: 70px" data-style="width: 70px" data-type="checkbox" class="translate">Active</th>
+                            <th data-name="year"     style="width: 10%" class="translate">year</th>
+                            <th data-name="month"     style="width: 10%" class="translate">month</th>
+                            <th data-name="day"     style="width: 10%" class="translate">day</th>
+                            <th data-name="hour"     style="width: 10%" class="translate">hour</th>
+                            <th data-name="minute"     style="width: 10%" class="translate">minute</th>
+                            <th data-name="active"  style="width: 70px" data-style="width: 70px" data-type="checkbox" class="translate">active</th>
                             <th data-buttons="delete up down" style="width: 120px"></th>
                         </tr>
                         </thead>
