--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -113,8 +113,7 @@
             <div class="col s12" id="setup">
                 <span style="font-size: larger;" class="translate">Add countdown:
                 <a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
-                <select class="value" id="bind"></select>
-                <label class="translate" for="bind">IP:</label>
+                <span class="translate">*Fields are mandatory!</span>
                 <div class="table-values-div">
                     <table class="table-values">
                         <thead>
