--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -109,27 +109,39 @@
                 <img src="countdown.png" class="logo"/>
             </div>
         </div>
-        <div id="tab-main"    class="col s10 page">
+        <div id="tab-main"    class="col s8 page">
                 <div class="col s12" id="info">
-                        <span style="font-size: larger;" class="translate">*Fields are mandatory!<span class="translate"></span>
+                        <label class="translate" for="interval">mandatory</label>
                 </div>
-            </div>
-        <div id="tab-main"    class="col s12 page">
-            <div class="col s12" id="setup">
-                <span style="font-size: larger;" class="translate">Add countdown:
+        </div>
+
+        <div id="tab-main"    class="col s8 page">
+                <div class="col s12" id="config">
+                        <select class="value" id="wordType">
+                                <option value="off" class="translate">Off</option>
+                                <option value="short" class="translate">Short</option>
+                                <option value="long" class="translate">Long</option>
+                            </select>
+                        <label for="notificationsType" class="translate">Countdown Summary</label>    
+
+                </div>
+        </div>
+        <div id="tab-main"    class="col s16 page">
+            <div class="col s16" id="setup">
+                <span style="font-size: larger;" class="translate">AddCtn
                         <a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
                 <div class="table-values-div">
                     <table class="table-values">
                         <thead>
                         <tr>
-                            <th data-name="_index"     style="width: 30px" class="translate">ID</th>
+                            <th data-name="_index"     style="width: 10%" class="translate">ID</th>
                             <th data-name="name"     style="width: 30%" class="translate">Name</th>
-                            <th data-name="year"     style="width: 10%" class="translate">year</th>
-                            <th data-name="month"     style="width: 10%" class="translate">month</th>
-                            <th data-name="day"     style="width: 10%" class="translate">day</th>
-                            <th data-name="hour"     style="width: 10%" class="translate">hour</th>
-                            <th data-name="minute"     style="width: 10%" class="translate">minute</th>
-                            <th data-name="active"  style="width: 70px" data-style="width: 70px" data-type="checkbox" class="translate">active</th>
+                            <th data-name="year"     style="width: 8%" class="translate">year</th>
+                            <th data-name="month"     style="width: 8%" class="translate">month</th>
+                            <th data-name="day"     style="width: 8%" class="translate">day</th>
+                            <th data-name="hour"     style="width: 8%" class="translate">hour</th>
+                            <th data-name="minute"     style="width: 8%" class="translate">minute</th>
+                            <th data-name="active"  style="width: 10%" data-style="width: 70px" data-type="checkbox" class="translate">active</th>
                             <th data-buttons="delete up down" style="width: 120px"></th>
                         </tr>
                         </thead>
