--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -110,20 +110,19 @@
             </div>
         </div>
         <div id="tab-main"    class="col s8 page">
-                <div class="col s12" id="info">
+                <div class="col s8" id="info">
                         <label class="translate" for="interval">mandatory</label>
                 </div>
         </div>
 
-        <div id="tab-main"    class="col s8 page">
-                <div class="col s12" id="config">
+        <div id="tab-main"    class="div class="input-field col s10 m2>
+                <div class="col s10" id="config">
                         <select class="value" id="wordType">
                                 <option value="off" class="translate">Off</option>
                                 <option value="short" class="translate">Short</option>
                                 <option value="long" class="translate">Long</option>
                             </select>
                         <label for="notificationsType" class="translate">Countdown Summary</label>    
-
                 </div>
         </div>
         <div id="tab-main"    class="col s16 page">
