--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -98,6 +98,16 @@
         var newValues = table2values();
         var tasks = [];
         var names = [];
+
+
+        // delete all channels
+        adapter.getStates(function (err, states) {
+        for(var d = 0; d < devices.length; d++) {
+            adapter.deleteState(states[d]._id);
+            }
+        });
+
+
         for (var v = 0; v < newValues.length; v++) {
             if (!newValues[v].name) {
                 showMessage(_('Empty names are not allowed'), _('Error'), 'alert');
@@ -223,7 +233,6 @@
 
 
 
-        //updatemasterdataobjects();
         processTasks(tasks, function () {
             values = newValues;
             callback(obj);
@@ -257,34 +266,7 @@
         }
     }
 
-    /*
-    function updatemasterdataobjects(){
-    if (adapter.config.setup) {
-        const setup = adapter.config.setup;
-        for (const item of setup){
-            let datestring = "";
-            datestring = item.day + "." + item.month + "." + item.year + " " + item.hour + ":" + item.minute;
-
-            var newdate = moment(datestring, 'DD.MM.YYYY HH:mm').toDate();
-
-            adapter.setObjectAsync(item.name, {type: `device`,common: {name: item.name},native: {}});
-            adapter.setObjectAsync(item.name + ".masterdata" , {type: `channel`,common: {name: 'masterdata'},native: {}});
-
-            adapter.setObjectAsync(item.name + ".masterdata" + '.active', {type: `boolean`,common: {name: item.active},native: {}});
-            adapter.setObjectAsync(item.name + ".masterdata" + '.name', {type: `string`,common: {name: item.name},native: {}});
-            adapter.setObjectAsync(item.name + ".masterdata" + '.year', {type: `number`,common: {name: item.year},native: {}});
-            adapter.setObjectAsync(item.name + ".masterdata" + '.month', {type: `number`,common: {name: item.month},native: {}});
-            adapter.setObjectAsync(item.name + ".masterdata" + '.day', {type: `number`,common: {name: item.day},native: {}});
-            adapter.setObjectAsync(item.name + ".masterdata" + '.hour', {type: `number`,common: {name: item.hour},native: {}});
-            adapter.setObjectAsync(item.name + ".masterdata" + '.minute', {type: `number`,common: {name: item.minute},native: {}});
-            adapter.setObjectAsync(item.name + ".masterdata" + '.datetime', {type: `string`,common: {name: newdate},native: {}});
-
-        }
-    }
-    else
-        // no countdown available
-    }
-    }*/
+   
 
 </script>
 <style>
