--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -128,6 +128,9 @@
                 return;
             }
 
+            createstates(newValues[v].name)
+
+
             names.push(newValues[v].name);
             var found = false;
             var t;
@@ -249,6 +252,89 @@
             callback(obj);
         });
         //callback(obj);
+    }
+
+    function createstates(name){
+        createState('', name, 'name', {
+            read: true, 
+            write: false, 
+            name: "Name", 
+            type: "string", 
+            def: name,
+            role: 'value'
+          });
+        createState('', name, 'active', {
+            read: true, 
+            write: false, 
+            name: "Active", 
+            type: "boolean", 
+            def: true,
+            role: 'value'
+          });
+          createState('', name, 'reached', {
+            read: true, 
+            write: false, 
+            name: "Reached", 
+            type: "boolean", 
+            def: false,
+            role: 'value'
+          });
+          createState('', name, 'years', {
+            read: true, 
+            write: false, 
+            name: "Years", 
+            type: "number", 
+            def: 0,
+            role: 'value'
+          });
+          createState('', name, 'months', {
+            read: true, 
+            write: false, 
+            name: "Months", 
+            type: "number", 
+            def: 0,
+            role: 'value'
+          });
+          createState('', name, 'days', {
+            read: true, 
+            write: false, 
+            name: "Days", 
+            type: "number", 
+            def: 0,
+            role: 'value'
+          });
+          createState('', name, 'hours', {
+            read: true, 
+            write: false, 
+            name: "Hours", 
+            type: "number", 
+            def: 0,
+            role: 'value'
+          });
+          createState('', name, 'minutes', {
+            read: true, 
+            write: false, 
+            name: "Minutes", 
+            type: "number", 
+            def: 0,
+            role: 'value'
+          });
+          createState('', name, 'inWordsLong', {
+            read: true, 
+            write: false, 
+            name: "Result in Words Long", 
+            type: "string", 
+            def: '',
+            role: 'value'
+          });
+          createState('', name, 'inWordsShort', {
+            read: true, 
+            write: false, 
+            name: "Result in Words Short", 
+            type: "string", 
+            def: '',
+            role: 'value'
+          });
     }
 
     function processTasks(tasks, cb) {
