changed device to channel

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -235,7 +235,7 @@
                         //substitute:     newValues[v].substitute,
                         //substituteOld:  newValues[v].substituteOld
                     },
-                    type: 'device'
+                    type: 'channel'
                 });
             //}
 
