--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -79,6 +79,16 @@
                 <label for="autodelete" class="translate">Delete Countdown when done</label>
                 <span class="translate"></span>
             </div>
+            <div class="input-field col m8">
+                <select class="value" multiple id="tablefields">
+                    <option class="translate" value="" disabled selected>Select the fields for the table export</option>
+                    <option class="translate" value="inWordsShort">In Words Short</option>
+                    <option class="translate" value="inWordsLong">In Words Long</option>
+                    <option class="translate" value="totalNoOfDays">Total No. of Days</option>
+                    <option class="translate" value="totalNoOfMinutes">Total No. of Minutes</option>
+                </select>
+                <label class="translate">Table Fields</label>
+</div>
         </div>
     </div>
 </div>
