--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -73,8 +73,9 @@
                 <img src="countdown.png" class="logo">
             </div>
         </div>
+
         <div class="row">
-            <div class="input-field col m12 l2">
+            <div class="input-field col m4">
                 <input class="value" id="autodelete" type="checkbox" />
                 <label for="autodelete" class="translate">Delete Countdown when done</label>
                 <span class="translate"></span>
@@ -85,10 +86,12 @@
                     <option class="translate" value="inWordsShort">In Words Short</option>
                     <option class="translate" value="inWordsLong">In Words Long</option>
                     <option class="translate" value="totalNoOfDays">Total No. of Days</option>
-                    <option class="translate" value="totalNoOfMinutes">Total No. of Minutes</option>
+                    <option class="translate" value="totalNoOfHours">Total No. of Hours</option>
+                    <option class="translate" value="endDate">End Date</option>
+
                 </select>
                 <label class="translate">Table Fields</label>
-</div>
+            </div>
         </div>
     </div>
 </div>
