--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -80,7 +80,7 @@
                 <label for="autodelete" class="translate">Delete Countdown when done</label>
                 <span class="translate"></span>
             </div>
-            <div class="input-field col m8">
+            <div class="input-field col s12 m4">
                 <select class="value" multiple id="tablefields">
                     <option class="translate" value="" disabled selected>Select the fields for the table export</option>
                     <option class="translate" value="inWordsShort">In Words Short</option>
@@ -88,7 +88,6 @@
                     <option class="translate" value="totalNoOfDays">Total No. of Days</option>
                     <option class="translate" value="totalNoOfHours">Total No. of Hours</option>
                     <option class="translate" value="endDate">End Date</option>
-
                 </select>
                 <label class="translate">Table Fields</label>
             </div>
