--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -82,7 +82,7 @@
             </div>
             <div class="input-field col s12 m4">
                 <select class="value" multiple id="tablefields">
-                    <option class="translate" value="" disabled selected>Select the fields for the table export</option>
+                    <option class="translate" value="" disabled selected>Select table fields</option>
                     <option class="translate" value="inWordsShort">In Words Short</option>
                     <option class="translate" value="inWordsLong">In Words Long</option>
                     <option class="translate" value="totalNoOfDays">Total No. of Days</option>
