--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -80,7 +80,10 @@
                 <label for="autodelete" class="translate">Delete Countdown when done</label>
                 <span class="translate"></span>
             </div>
-            <div class="input-field col s12 m4">
+            
+        </div>
+        <div class="row">
+            <div class="input-field">
                 <select class="value" multiple id="tablefields">
                     <option class="translate" value="" disabled selected>Select table fields</option>
                     <option class="translate" value="inWordsShort">In Words Short</option>
@@ -91,6 +94,7 @@
                 </select>
                 <label class="translate">Table Fields</label>
             </div>
+
         </div>
     </div>
 </div>
