--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -83,18 +83,34 @@
             
         </div>
         <div class="row">
-            <div class="input-field">
-                <select class="value" multiple id="tablefields">
-                    <option class="translate" value="" disabled selected>Select table fields</option>
-                    <option class="translate" value="inWordsShort">In Words Short</option>
-                    <option class="translate" value="inWordsLong">In Words Long</option>
-                    <option class="translate" value="totalNoOfDays">Total No. of Days</option>
-                    <option class="translate" value="totalNoOfHours">Total No. of Hours</option>
-                    <option class="translate" value="endDate">End Date</option>
-                </select>
-                <label class="translate">Table Fields</label>
-            </div>
-
+            <div class="input-field col s6">
+                <input type="checkbox" id="inWordsShort" class="value" />
+                <label for="inWordsShort" class="translate">inWordsShort</label>
+            </div> 
+        </div>
+        <div class="row">
+            <div class="input-field col s6">
+                <input type="checkbox" id="inWordsLong" class="value" />
+                <label for="inWordsLong" class="translate">inWordsLong</label>
+            </div> 
+        </div>
+        <div class="row">
+            <div class="input-field col s6">
+                <input type="checkbox" id="totalNoOfDays" class="value" />
+                <label for="totalNoOfDays" class="translate">totalNoOfDays</label>
+            </div> 
+        </div>
+        <div class="row">
+            <div class="input-field col s6">
+                <input type="checkbox" id="totalNoOfHours" class="value" />
+                <label for="totalNoOfHours" class="translate">totalNoOfHours</label>
+            </div> 
+        </div>
+        <div class="row">
+            <div class="input-field col s6">
+                <input type="checkbox" id="endDate" class="value" />
+                <label for="endDate" class="translate">endDate</label>
+            </div> 
         </div>
     </div>
 </div>
