--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -83,6 +83,11 @@
             
         </div>
         <div class="row">
+            <div class="col s12">
+                <span class="translate">tablecontent</span>
+            </div>
+        </div>
+        <div class="row">
             <div class="input-field col s6">
                 <input type="checkbox" id="inWordsShort" class="value" />
                 <label for="inWordsShort" class="translate">inWordsShort</label>
